# Ticket-Triage-ML-Service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
plans/: stage3-serving-plan.md
src/ticket_triage/: dummy.py
src/ticket_triage/api/: app.py
src/ticket_triage/core/: schemas.py
src/ticket_triage/ml/: artifacts.py  data.py  train.py
tests/: conftest.py  test_api_contract.py  test_model_edge_cases.py
